# Polymarket

./: .env.example  .gitattributes  .gitignore  Agents.md  README.md  pyproject.toml  requirements.txt
docs/: BACKTEST_AND_HIGH_RES_DATA.md  HANDOFF_2026_05_18.md  LOCAL_POSTGRES_SETUP.md  METHODOLOGY_REPORT_2026_05_18.md  OVERVIEW_REPORT.md  PHASE6_GO_LIVE_CHECKLIST.md  PROGRESS_2026_05_18.md  REVIEW_2026_05_12.md  SOURCE_SELECTION_PHASE_A.md  SPATIAL_NEIGHBOR_INTEGRATION.md
migrations/: 001_init.sql  002_ensembles_live.sql  003_paper_trades.sql  004_orders_fills.sql  005_hourly_observations.sql  006_isotonic_calibration.sql  007_maker_fill_coefs.sql
polymarket_manual/: __init__.py  clients.py  config.py
polymarket_weather/: __init__.py  backtest.py  backtest_dashboard.py  calibration.py  config.py  dashboard.py  db.py  live_report.py  markets.py  paper.py  parity.py  recommend.py  score.py  stations.py
scripts/: _compare_runs.py  _db_activity.py  _db_cleanup.py  _fee_diag.py  _price_band_sweep.py  _price_bins.py  _render_backtest_md.py  _slip_sweep.py  _won_audit.py  backfill_historical_multi_lead.py  backfill_open_meteo_history.py  backtest_grid.py  backtest_md_from_json.py  cancel_order.py  inspect_backtest_fills.py  inspect_may8.py  inspect_paper_tick.py  list_markets.py  list_orders.py  orderbook.py  paper_tick_hourly.py  ping.py  place_limit.py  place_market.py  quarantine_buggy_paper.py  rebuild_research_data.py  register_run_loop_task.ps1  reset_for_rebuild.py  smoke_backtest_export.py  sync_azure_weather_to_local.ps1
tests/: test_cli_date_parse.py  (+8 more)
(+58 files in other folders)
