[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-manual"
version = "0.1.0"
description = "Manual Polymarket CLOB helpers (Python)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client-v2>=1.0.0,<2",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_manual*"]
